<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layouts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_name">Name</string>
    <string name="tv_Address">Address</string>
    <string name="tv_Gender">Gender</string>
    <string name="rb_Male">Male</string>
    <string name="rb_Female">Female</string>
    <string name="tv_Notification_Toggle">Notify Me</string>
    <string name="btn_Save">Save</string>
    <string name="tv_City">City</string>
    <string-array name="City_List">
        <item >Vadodara</item>
        <item >Vasad</item>
        <item >Surat</item>
        <item >Ahmedabad</item>
        <item >Gandhinagar</item>
    </string-array>
        <string name="tv_Form_Details">Details</string>
        <string name="tv_Hobbies">Hobbies</string>
        <string-array name="Hobbies">
            <item >Sports</item>
            <item >Reading</item>
            <item >Travelling</item>
            <item >Surfing</item>
            <item >Chatting</item>
        </string-array>

</resources>
